Refactor NPC cleanup logic in Puller to streamline removal process